[package]
name = "lms2-bsuir-rs"
version = "0.1.0"
authors = ["Logarithmus <logarithmus.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#lto = "thin"

[dependencies]
regex = { version = "1.3", default-features = false, features = ["std", "unicode"] }
curl = "0.4"
lazy_static = "*"